@@ -1,1 +1,1 @@
-1.2.23
+1.2.24
