@@ -136,6 +136,7 @@ $cacti_version_codes = array(
 	'1.2.21'  => '0103',
 	'1.2.22'  => '0103',
 	'1.2.23'  => '0103',
+	'1.2.24'  => '0103',
 );
 
 $messages = array(
