@@ -39,9 +39,17 @@ function import_xml_data(&$xml_data, $import_as_new, $profile_id, $remove_orphan
 		return $info_array;
 	}
 
+	$host_template_data = array();
+
 	foreach ($xml_array as $hash => $hash_array) {
 		/* parse information from the hash */
 		$parsed_hash = parse_xml_hash($hash);
+
+		if ($parsed_hash['type'] == 'graph_template') {
+			$host_template_data['graph_template'][$parsed_hash['hash']] = $hash_array['name'];
+		} elseif ($parsed_hash['type'] == 'data_query') {
+			$host_template_data['data_query'][$parsed_hash['hash']] = $hash_array['name'];
+		}
 
 		/* invalid/wrong hash */
 		if ($parsed_hash == false) {
@@ -57,10 +65,9 @@ function import_xml_data(&$xml_data, $import_as_new, $profile_id, $remove_orphan
 		}
 	}
 
-	//print '<pre>';print_r($dep_hash_cache);print '</pre>';exit;
-
 	// Populate the hash cache with preexisting objects.
 	$hash_cache = array();
+
 	$hash_types_to_db_info = array(
 		'graph_template' => array(
 			'table' => 'graph_templates',
@@ -121,6 +128,7 @@ function import_xml_data(&$xml_data, $import_as_new, $profile_id, $remove_orphan
 			'hash_field' => 'name',
 		),
 	);
+
 	$hash_cache_sql_union_selects = array();
 
 	foreach ($hash_types_to_db_info as $hash_type => $db_info) {
@@ -164,7 +172,7 @@ function import_xml_data(&$xml_data, $import_as_new, $profile_id, $remove_orphan
 		/* do we have any matches for this type? */
 		if (isset($dep_hash_cache[$type])) {
 			/* yes we do. loop through each match for this type */
-			for ($i=0; $i<cacti_count($dep_hash_cache[$type]); $i++) {
+			for ($i = 0; $i < cacti_count($dep_hash_cache[$type]); $i++) {
 				if (!isset($cacti_version_codes[$dep_hash_cache[$type][$i]['version']])) {
 					return false;
 				}
@@ -198,7 +206,7 @@ function import_xml_data(&$xml_data, $import_as_new, $profile_id, $remove_orphan
 		/* do we have any matches for this type? */
 		if (isset($dep_hash_cache[$type])) {
 			/* yes we do. loop through each match for this type */
-			for ($i=0; $i<cacti_count($dep_hash_cache[$type]); $i++) {
+			for ($i = 0; $i < cacti_count($dep_hash_cache[$type]); $i++) {
 				$import_debug_info = array();
 
 				if (!isset($cacti_version_codes[$dep_hash_cache[$type][$i]['version']])) {
@@ -228,7 +236,7 @@ function import_xml_data(&$xml_data, $import_as_new, $profile_id, $remove_orphan
 					$repair++;
 					break;
 				case 'host_template':
-					$hash_cache += xml_to_host_template($dep_hash_cache[$type][$i]['hash'], $hash_array, $hash_cache);
+					$hash_cache += xml_to_host_template($dep_hash_cache[$type][$i]['hash'], $hash_array, $hash_cache, $host_template_data);
 					break;
 				case 'data_input_method':
 					$hash_cache += xml_to_data_input_method($dep_hash_cache[$type][$i]['hash'], $hash_array, $hash_cache);
@@ -1565,7 +1573,7 @@ function xml_to_data_source_profile($hash, &$xml_array, &$hash_cache, $import_as
 
 }
 
-function xml_to_host_template($hash, &$xml_array, &$hash_cache) {
+function xml_to_host_template($hash, &$xml_array, &$hash_cache, &$host_template_data) {
 	global $fields_host_template_edit, $preview_only, $import_debug_info;
 
 	/* track changes */
@@ -1599,6 +1607,64 @@ function xml_to_host_template($hash, &$xml_array, &$hash_cache) {
 	/* check for status changes */
 	$status += compare_data($save, $previous_data, 'host_template');
 
+	if (cacti_sizeof($host_template_data)) {
+		foreach ($host_template_data as $type => $data) {
+			foreach ($data as $hash => $name) {
+				if ($type == 'graph_template') {
+					$exists1 = db_fetch_cell_prepared('SELECT id
+						FROM graph_templates
+						WHERE hash = ?',
+						array($hash));
+
+					if (!$exists1) {
+						$import_debug_info['differences'][] = __('New Graph Template: %s', $name);
+						$status++;
+					} elseif ($save['id']) {
+						// For existing, we have to perform two checks
+						$exists2 = db_fetch_cell_prepared('SELECT COUNT(*)
+							FROM host_template_graph
+							WHERE host_template_id = ?
+							AND graph_template_id = ?',
+							array($save['id'], $exists1));
+
+						if (!$exists2) {
+							$data_query_id = db_fetch_cell_prepared('SELECT snmp_query_id
+								FROM snmp_query_graph
+								WHERE graph_template_id = ?',
+								array($exists1));
+
+							if (!$data_query_id) {
+								$import_debug_info['differences'][] = __('New Graph Template: %s', $name);
+								$status++;
+							}
+						}
+					}
+				} elseif ($type == 'data_query') {
+					$exists = db_fetch_cell_prepared('SELECT id
+						FROM snmp_query
+						WHERE hash = ?',
+						array($hash));
+
+					if (!$exists) {
+						$import_debug_info['differences'][] = __('New Data Query: %s', $name);
+						$status++;
+					} elseif ($save['id']) {
+						$exists = db_fetch_cell_prepared('SELECT COUNT(*)
+							FROM host_template_snmp_query
+							WHERE host_template_id = ?
+							AND snmp_query_id = ?',
+							array($save['id'], $exists));
+
+						if (!$exists) {
+							$import_debug_info['differences'][] = __('New Data Query: %s', $name);
+							$status++;
+						}
+					}
+				}
+			}
+		}
+	}
+
 	if (!$preview_only) {
 		$host_template_id = sql_save($save, 'host_template');
 
@@ -1608,7 +1674,7 @@ function xml_to_host_template($hash, &$xml_array, &$hash_cache) {
 		$hash_items = explode('|', $xml_array['graph_templates']);
 
 		if (!empty($hash_items[0])) {
-			for ($i=0; $i<cacti_count($hash_items); $i++) {
+			for ($i = 0; $i < cacti_count($hash_items); $i++) {
 				/* parse information from the hash */
 				$parsed_hash = parse_xml_hash($hash_items[$i]);
 
@@ -1630,7 +1696,7 @@ function xml_to_host_template($hash, &$xml_array, &$hash_cache) {
 		$hash_items = explode('|', $xml_array['data_queries']);
 
 		if (!empty($hash_items[0])) {
-			for ($i=0; $i<cacti_count($hash_items); $i++) {
+			for ($i = 0; $i < cacti_count($hash_items); $i++) {
 				/* parse information from the hash */
 				$parsed_hash = parse_xml_hash($hash_items[$i]);
 
@@ -2109,8 +2175,11 @@ function compare_data($save, $previous_data, $table) {
 		return 0;
 	} else {
 		$different = 0;
+
 		foreach($save as $column => $value) {
-			if (array_search($column, $ignores) !== false) continue;
+			if (array_search($column, $ignores) !== false) {
+				continue;
+			}
 
 			if ($previous_data[$column] != $value) {
 				$cols = db_get_table_column_types($table);
@@ -2457,6 +2526,7 @@ function import_display_results($import_debug_info, $filestatus, $web = false, $
 			}
 
 			$type_name = !empty($hash_type_names[$type]) ? $hash_type_names[$type] : "Unknown type: $type";
+
 			print PHP_EOL . "<p><strong>" . $type_name . "</strong></p>" . PHP_EOL;
 
 			foreach ($type_array as $index => $vals) {
